# dj-kaos-package-cookiecutter

./: .gitignore  cookiecutter.json
{{ cookiecutter.repo_name }}/: .editorconfig  .env  .env.example  .gitignore  MANIFEST.in  requirements.txt  setup.cfg
{{ cookiecutter.repo_name }}/example/example/: settings.py  urls.py
{{ cookiecutter.repo_name }}/example/templates/: base.html
{{cookiecutter.repo_name}}/: .gitignore  MANIFEST.in  requirements.dev.txt  requirements.txt  setup.cfg
{{cookiecutter.repo_name}}/example/: .env  .env.copy  requirements.txt
{{cookiecutter.repo_name}}/example/example/: settings.py  urls.py
{{cookiecutter.repo_name}}/example/sample_app/: models.py
{{cookiecutter.repo_name}}/example/templates/: base.html
