[metadata]
name = {{ cookiecutter.repo_name }}
version = attr: {{ cookiecutter.package_name }}.__version__
description = {{  cookiecutter.description }}
long_description = file: README.md
url = https://github.com/keyvanm/{{ cookiecutter.repo_name }}
author = Keyvan Mosharraf
author_email = keyvan@keyvanm.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.X
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

keywords = {{ cookiecutter.keywords }}

[options]
include_package_data = true
packages = find:
{% if cookiecutter.is_scripts_package == 'y' %}
scripts = bin/sample
{% endif %}
install_requires =
    django~=3.1
{%- if cookiecutter.kaos_utils == 'y' %}
    dj-kaos-utils
{% endif %}
